API: Added 'AmendAppointment' Endpoint for All
