# openapi.yml
@@ -1367,9 +1367,7 @@ paths:
       summary: Book an appointment
       tags:
         - Appointments
-        - Patient
-        - Doctor
-        - Admin
+        - All
       description: Endpoint to book an appointment for a patient with a doctor.
       operationId: bookAppointment
       requestBody:
@@ -1504,6 +1502,135 @@ paths:
                       - patient
                       - date
                       - time
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                required:
+                  - error
+                  - message
+        '422':
+          description: Unprocessable entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                required:
+                  - error
+                  - message
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                required:
+                  - error
+                  - message
+  /auth/internal/appointment/{id}/amend:
+    patch:
+      summary: Amend an appointment
+      tags:
+        - Appointments
+        - All
+      description: Endpoint to amend an existing appointment by ID.
+      operationId: amendAppointment
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the appointment to amend
+          schema:
+            type: string
+        - name: content-type
+          in: header
+          required: false
+          description: Content type of the request
+          schema:
+            type: string
+            enum: ['application/json']
+        - name: origin
+          in: header
+          required: true
+          description: Origin of the request
+          schema:
+            type: string
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                doctorId:
+                  type: string
+                patientId:
+                  type: string
+                upcoming:
+                  type: boolean
+                canceled:
+                  type: boolean
+                date:
+                  type: string
+                  format: date
+                time:
+                  type: string
+                  format: time
+                bookedBy:
+                  type: string
+                bookedAt:
+                  type: string
+                  format: date-time
+                updatedAt:
+                  type: string
+                  format: date-time
+                vitals:
+                  type: object
+                  properties:
+                    height:
+                      type: string
+                    weight:
+                      type: string
+                    bloodPressure:
+                      type: string
+                    heartRate:
+                      type: string
+                    temperature:
+                      type: string
+                preAppointmentNotes:
+                  type: string
+                actionsTaken:
+                  type: string
+                previousAppointmentId:
+                  type: string
+                nextAppointmentId:
+                  type: string
+                postAppointmentNotes:
+                  type: string
+      responses:
+        '200':
+          description: Appointment successfully amended
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppointmentData'
         '403':
           description: Forbidden
           content:
